generated/manifests/prod-axon/hindsight-pg/CiliumNetworkPolicy-allow-hindsight-pg-apiserver-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  name: allow-hindsight-pg-apiserver-egress
  namespace: ai
spec:
  description: Allow hindsight-pg CNPG instance pods to talk to kube-apiserver.
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: hindsight-pg
