generated/manifests/prod-axon/hindsight-pg/CiliumNetworkPolicy-allow-hindsight-pg-internal.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hindsight-pg-internal
  namespace: ai
spec:
  description: 'hindsight-pg ingress: hindsight (5432), peer replication (5432/8000), CNPG operator (8000), prometheus (9187).'
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: hindsight-pg
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: hindsight
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: hindsight-pg
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
